updated logo path

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
   <header id="navbar">
     <nav class="nav-wrapper container">
       <a href="index.html" class="home-link">
-        <img id="logo" src="logo.png">
+        <img id="logo" src="assets/logo.png">
         nextwatch
       </a>
 
