--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
   <meta charset="UTF-8">
   <meta name="keywords" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="logo.png" />
-  <link rel="stylesheet" type="text/css" href="index.css">
+  <link rel="icon" href="assets/logo.png" />
+  <link rel="stylesheet" type="text/css" href="general.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
 
 </head>
