started using moviedb

--- a/public/home.html
+++ b/public/home.html
@@ -7,10 +7,12 @@
     <link rel="icon" href="assets/logo.png" />
     <link rel="stylesheet" type="text/css" href="general.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+    <script src="recs.js"></script>
   </head>
-  <body style="text-align: center">
-    <h2>Home</h2>
+  <body style="text-align: center">    
+    <h1>Home</h1>
     <div id="watchListDiv"></div>
+    <div id="test"></div>
     <br />
     <button id="logout">Logout</button>
     <script>
