--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Home - Nextwatch</title>
+  <title>Nextwatch</title>
   <meta charset="UTF-8">
   <meta name="keywords" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -36,8 +36,9 @@
     </nav>
   </header>
 
-  <script src="index.js"></script>
+  <script src="nav.js"></script>
 
+  <div><h1><a href="register.html">Sign up here!</a></h1></div>
 </body>
 
 </html>
