--- a/public/login.html
+++ b/public/login.html
@@ -7,20 +7,68 @@
     <link rel="icon" href="assets/logo.png" />
     <link rel="stylesheet" type="text/css" href="general.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+    <style type="text/css">
+      .login-wrapper {
+        background-color: #1a1a1a;
+        width: 400px;
+        margin-top: 25px;
+        margin-left: auto;
+        margin-right: auto;
+        padding: 30px 10px 30px 10px;
+        box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.15);
+      }
+
+      .big-logo {
+        width: 125px;
+        height: 125px;
+        margin: 0px 10px 10px 10px;
+      }
+
+      input {
+        width: 225px;
+        height: 30px;
+        padding-left: 5px;
+      }
+
+      input[type=submit] {
+        font-size: 16px;
+        background-color: #7342A3;
+        border-radius: 5px;
+        height: 30px;
+        letter-spacing: .1em;
+      }
+      
+      label {
+        color: #ffffff;
+        float: left;
+        margin-left: 80px;
+      }
+    </style>
   </head>
+    
   <body style="text-align: center">
-    <h2>Login</h2>
+    <h1>Login</h1>
+    <div class="login-wrapper">
+    <img class="big-logo" src="assets/logo.png">
     <form id="loginForm">
-      <label for="email">email</label>
+      <label for="email">Email</label>
+      <br />
       <input type="text" id="email" name="email" required />
       <br />
       <br />
-      <label for="password">password</label>
+      <label for="password">Password</label>
+      <br />
       <input type="password" id="password" name="password" required />
       <br />
       <br />
-      <input type="submit" value="Login" />
+      <input type="submit" value="LOGIN" />
     </form>
+    <br />
+    <div style="color: #ffffff">
+      Don't have an account? <br /><br />
+      <a href="#" style="color: #7342A3">Register here</a>
+    </div>
+    </div>
     <br />
     <div id="result"></div>
 
