--- a/public/home.html
+++ b/public/home.html
@@ -8,11 +8,38 @@
     <link rel="stylesheet" type="text/css" href="general.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <script src="recs.js"></script>
+    <style type="text/css">
+      .trending {
+        width: 80%;
+        background-color: #000000;
+        margin-left: auto;
+        margin-right: auto;
+        padding-top: 20px;
+        padding-bottom: 10px;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+      }
+      
+      .trend-item {
+        padding-top: 10px;
+      }
+    </style>
   </head>
   <body style="text-align: center">    
     <h1>Home</h1>
     <div id="watchListDiv"></div>
-    <div id="test"></div>
+    <h2 class="trending">Trending</h2>
+    <div class="trending">
+      <script>
+        var s = "";
+        for (i = 0; i < 20; i++) {
+          s += '<div class="trend-item" id="top' + i + '"></div><br><br>';
+          document.write(s);
+        }
+      </script>
+    </div>
     <br />
     <button id="logout">Logout</button>
     <script>
