added nav to home and recs

--- a/public/index.html
+++ b/public/index.html
@@ -28,8 +28,8 @@
 
       <div class="nav-menu">
         <ul class="nav-links">
-          <li class="nav-item"><a class="nav-link" href="#">Recommendations</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">My Watchlist</a></li>
+          <li class="nav-item"><a class="nav-link" href="recs.html">Recommendations</a></li>
+          <li class="nav-item"><a class="nav-link" href="home.html">My Watchlist</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Profile</a></li>
         </ul>
       </div>
@@ -38,7 +38,7 @@
 
   <script src="nav.js"></script>
 
-  <div><h1><a href="register.html">Sign up here!</a></h1></div>
+  <div><h1 style="text-align: center;padding-top:10px;"><a href="register.html">Sign up here!</a></h1></div>
 </body>
 
 </html>
