--- a/public/register.html
+++ b/public/register.html
@@ -9,6 +9,30 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
   </head>
   <body style="text-align: center">
+    <header id="navbar">
+      <nav class="nav-wrapper container">
+        <a href="index.html" class="home-link">
+          <img id="logo" src="assets/logo.png">
+          nextwatch
+        </a>
+  
+        <button type="button" class="nav-toggle">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+  
+        <div class="nav-menu">
+          <ul class="nav-links">
+            <li class="nav-item"><a class="nav-link" href="recs.html">Recommendations</a></li>
+            <li class="nav-item"><a class="nav-link" href="home.html">My Watchlist</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Profile</a></li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+    <script src="nav.js"></script>
+    
     <h1>Register</h1>
     <form id="registerForm">
       <label for="email">email</label>
