linked login and register to each other

--- a/public/register.html
+++ b/public/register.html
@@ -47,6 +47,10 @@
 
       <input type="submit" value="Register" />
     </form>
+    <div style="color: #ffffff">
+      Already have an account? <br /><br />
+      <a href="login.html" style="color: #7342A3">Login here</a>
+    </div>
 
     <script>
       const registerForm = document.getElementById("registerForm");
