--- a/public/login.html
+++ b/public/login.html
@@ -66,7 +66,7 @@
     <br />
     <div style="color: #ffffff">
       Don't have an account? <br /><br />
-      <a href="#" style="color: #7342A3">Register here</a>
+      <a href="register.html" style="color: #7342A3">Register here</a>
     </div>
     </div>
     <br />
