updated button hover

--- a/public/register.html
+++ b/public/register.html
@@ -48,7 +48,7 @@
         width:10%; 
     }
     .register-button:hover {
-        border: 1px solid #aaa;
+        background-color: #aaa;
     }
     </style>
   </head>
