updated logout button

--- a/public/recs.html
+++ b/public/recs.html
@@ -26,6 +26,22 @@
       .trend-item {
         padding-top: 10px;
       }
+      .logout-button {
+    /* remove default behavior */
+        appearance:none;
+        -webkit-appearance:none;
+    /* usual styles */
+        padding:10px;   
+        border:none;
+        background-color:#3F51B5;
+        color:#fff;
+        font-weight:600;
+        border-radius:5px;
+        width:10%; 
+    }
+    .logout-button:hover {
+        background-color: #aaa;
+    }
     </style>
   </head>
   <body style="text-align: center">    
