--- a/public/register.html
+++ b/public/register.html
@@ -50,6 +50,9 @@
     .register-button:hover {
         background-color: #aaa;
     }
+    A {
+      text-decoration: none;
+    }
     </style>
   </head>
   <body style="text-align: center">
