--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       margin-bottom: 10px;
       color: #7342A3;
     }
-    .reg-text, li {
+    .reg-text, ol {
       font-size: 20px;
       margin-bottom: 10px;
       color: #ffffff;
@@ -54,8 +54,7 @@
       <div class="nav-menu">
         <ul class="nav-links">
           <li class="nav-item"><a class="nav-link" href="recs.html">Recommendations</a></li>
-          <li class="nav-item"><a class="nav-link" href="home.html">My Watchlist</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Profile</a></li>
+          <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
         </ul>
       </div>
     </nav>
@@ -72,7 +71,7 @@
   <div class="about-container">
     <h2>Get Started</h2>
     <ol class="reg-text" style="margin-left:25px">
-      <li>Create an account <a href="register.html">Sign up here!</a></li>
+      <li>Create an account <a href="register.html" class="nonNavLink">Sign up here!</a></li>
       <li>Search for a movie</li>
       <li>Pop some popcorn</li>
       <li>Sit back, relax and ENJOY!</li>
