--- a/public/recs.html
+++ b/public/recs.html
@@ -1,144 +1,235 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nextwatch - Recommendations</title>
-    <link rel="icon" href="assets/logo.png" />
-    <link rel="stylesheet" type="text/css" href="general.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-    <script src="recs.js"></script>
-    <style type="text/css">
-      .trending {
-        width: 80%;
-        background-color: #000000;
-        margin-left: auto;
-        margin-right: auto;
-        padding-top: 20px;
-        padding-bottom: 10px;
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: center;
-      }
-      .search-container {
-        width: 50%;
-        margin-left: auto;
-        margin-right: auto;
-        padding: 30px 10px 30px 10px;
-      }
-      .trend-item {
-        padding: 10px;
-      }
-      .logout-button {
-    /* remove default behavior */
-        appearance:none;
-        -webkit-appearance:none;
-    /* usual styles */
-        padding:10px;   
-        border:none;
-        background-color:#3F51B5;
-        color:#fff;
-        font-weight:600;
-        border-radius:5px;
-        width:10%; 
-    }
-    .logout-button:hover {
-        background-color: #aaa;
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Nextwatch - Recommendations</title>
+  <link rel="icon" href="assets/logo.png" />
+  <link rel="stylesheet" type="text/css" href="general.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+  <script src="recs.js"></script>
+  <style type="text/css">
+    .movieDisplay {
+      width: 80%;
+      background-color: #000000;
+      margin-left: auto;
+      margin-right: auto;
+      padding-top: 20px;
+      padding-bottom: 10px;
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: center;
     }
 
-    select, input {
-      flex-grow: 1;
-      font-size: 24px;
+    .search-container {
+      width: 80%;
+      margin-left: auto;
+      margin-right: auto;
+      padding: 30px 10px 30px 10px;
+    }
+
+    .search-form {
+      width: 100%;
+      display: flex;
+      justify-content: space-around;
+    }
+
+    .movieBlock {
+      padding: 10px;
+    }
+
+    .moviePoster {
+      position: relative;
+    }
+
+    .moreInfo {
+      position: absolute;
+      width: 200px;
+      margin-left: 0;
+      margin-top: -280px;
+      opacity: 0;
+      color: #fff;
+      padding: 5px;
+    }
+
+    .movieTitle {
+      font-size: 16px;
+      font-weight: bold;
+      padding-bottom: 7px;
+    }
+
+    .synopsis {
+      font-size: 15px;
+      padding-bottom: 7px;
+    }
+
+    .addButton {
+      width: 150px;
+      margin-top: 5px;
+      border: 2px solid #fff;
+      border-radius: 6px;
+      color: #fff;
+      background: transparent;
+      padding: 7px;
+    }
+
+    input[type=image] {
+      width: 50px;
+      height: 50px;
+    }
+
+    .addButton:hover {
+      background-color: #7342A3;
+      border: 2px solid #7342A3;
+    }
+
+    .movieBlock.interested .moreInfo {
+      opacity: 1;
+    }
+
+    .movieBlock.interested .moviePoster {
+      opacity: 0;
+    }
+
+    select,
+    input {
+      font-size: 20px;
       border-radius: 5px;
     }
+  </style>
+  <script>
+    const vibe = 0;
+    const person = 1;
 
-    input[type=text] {
-      flex-grow: 2;
-    }
-    </style>
-  </head>
-  <body style="text-align: center">    
-    <header id="navbar">
-      <nav class="nav-wrapper container">
-        <a href="index.html" class="home-link">
-          <img id="logo" src="assets/logo.png">
-          nextwatch
-        </a>
-  
-        <button type="button" class="nav-toggle">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-  
-        <div class="nav-menu">
-          <ul class="nav-links">
-            <li class="nav-item"><a class="nav-link" href="recs.html">Recommendations</a></li>
-            <li class="nav-item"><a class="nav-link" href="home.html">My Watchlist</a></li>
-            <button id="logout">Logout</button>
+    $(document).ready(function () {
+      $('#searchType').change(function () {
+        var selected = $('#searchType')[0].selectedIndex;
+        if (selected == vibe) {
+          $('#personSearch').hide();
+          $('#vibeDrop').show();
+        } else if (selected == person) {
 
-          </ul>
-        </div>
-      </nav>
-    </header>
-  
-    <script src="nav.js"></script>
-    <div class="search-container">
-      <form class="search" style="display:flex; justify-content: space-around;">
-        <select>        
-          <option value="genre">Genre</option>
-          <option value="actor">Actor/Actress</option>
-          <option value="vibe">~VIBE~</option>
-        </select> 
-        <br /> <br />
-        <input type="text">
-        <br /> <br />
-        <input type="submit" value="Search">
-      </form>
-    </div>
-    <div id="watchListDiv"></div>
-
-    <h2 class="trending">Trending</h2>
-    <div class="trending">
-      <script>
-        var s = "";
-        for (i = 0; i < 20; i++) {
-          s += '<div id="top' + i + '"></div><br><br>';
-          document.write(s);
         }
-      </script>
-    </div>
-    <br />
-    <script>
-      const watchListDiv = document.getElementById("watchListDiv");
-      const logoutButton = document.getElementById("logout");
-      const getWatchList = async () => {
-        const token = window.localStorage.getItem("movieAppToken");
-        const rawRes = await fetch("/api/user/watchList", {
-          headers: {
-            "authorization": `Bearer ${token}`,
-          },
-        });
-        if (rawRes.status == 200) {
-          const res = await rawRes.json();
-          watchListDiv.innerHTML = "Your watchList: " + res.watchList;
-        } else {
-          watchListDiv.innerHTML = "Access Denied. Please log in first...";
-          setTimeout(function () {
-            window.location.href = "/login.html";
-          }, 3000);
-        }
-      };
-      getWatchList();
-
-      logoutButton.addEventListener("click", () => {
-        window.localStorage.removeItem("movieAppToken");
-        watchListDiv.innerHTML = "Logging you out...";
-        setTimeout(function () {
-          window.location.href = "/login.html";
-        }, 2500);
       });
+
+      $(".movieBlock").hover(function () {
+        $(this).addClass("interested");
+      }, function () {
+        $(this).removeClass("interested");
+      });
+    });
+
+  </script>
+</head>
+
+<body style="text-align: center">
+  <header id="navbar">
+    <nav class="nav-wrapper container">
+      <a href="index.html" class="home-link">
+        <img id="logo" src="assets/logo.png">
+        nextwatch
+      </a>
+
+      <button type="button" class="nav-toggle">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+
+      <div class="nav-menu">
+        <ul class="nav-links">
+          <li class="nav-item"><a class="nav-link" href="recs.html">Recommendations</a></li>
+          <li class="nav-item"><a class="nav-link" href="home.html">My Watchlist</a></li>
+          <li class="nav-item"><button id="logout">Logout</button></li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+
+  <script src="nav.js"></script>
+  <script language="javascript">
+    const vibeTitles = [
+      "Adventure from the Couch",
+      "Family Movie Night",
+      "Date Night",
+      "Out of this World",
+      "Bust out the Tissues",
+      "When You Need to Laugh"
+    ];
+
+    const subVibes = [
+      ['action', 'adventure', 'western', 'science fiction', 'mystery'],
+      ['family', 'fantasy', 'animation'],
+      ['romantic', 'comedy'],
+      ['fantasy', 'science fiction'],
+      ['drama', 'romance'],
+      ['comedy']
+    ];
+
+    function Vibe(title, subgenres) {
+      this.title = title;
+      this.subgenres = subgenres;
+    }
+
+    var vibes = [];
+    for (i = 0; i < vibeTitles.length; i++) {
+      var newVibe = new Vibe(vibeTitles[i], subVibes[i]);
+      vibes.push(newVibe);
+    }
+  </script>
+
+  <div class="search-container">
+    <form class="search-form">
+      <select name="searchType" id="searchType">
+        <option value="vibe">~VIBE~</option>
+        <option value="actor">Actor/Actress</option>
+      </select>
+      <br /> <br />
+      <input type="text" id="personSearch" style="display: none;">
+      <script language="javascript">
+        var selectString = "<select id=vibeDrop>";
+        for (i = 0; i < vibeTitles.length; i++) {
+          selectString += "<option>" + vibeTitles[i] + "</option>";
+        }
+        selectString += "</select>";
+        document.writeln(selectString);
+      </script>
+      <br /> <br />
+      <input type="submit" value="Search">
+    </form>
+  </div>
+  <div id="watchListDiv" style="display: hidden;"></div>
+
+  <h2 class="movieDisplay">Recommendations</h2>
+  <div class="movieDisplay">
+    <script>
+      var s = "";
+      for (i = 0; i < 20; i++) {
+        s = '<div class="movieBlock" id="top' + i + '"></div>';
+        document.write(s);
+        s = "";
+      }
     </script>
-  </body>
+  </div>
+
+  <button type="button" id="testAdd"> Add to my watchlist </button>
+
+
+
+  <br />
+  <script>
+    const logoutButton = document.getElementById("logout");
+
+    logoutButton.addEventListener("click", () => {
+      window.localStorage.removeItem("movieAppToken");
+      watchListDiv.innerHTML = "Logging you out...";
+      setTimeout(function () {
+        window.location.href = "/login.html";
+      }, 2500);
+    });
+  </script>
+</body>
+
 </html>
