can search by person

--- a/public/login.html
+++ b/public/login.html
@@ -28,8 +28,7 @@
         <div class="nav-menu">
           <ul class="nav-links">
             <li class="nav-item"><a class="nav-link" href="recs.html">Recommendations</a></li>
-            <li class="nav-item"><a class="nav-link" href="home.html">My Watchlist</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Profile</a></li>
+            <li class="nav-item"><a class="nav-link" href="register.html">Register</a></li>
           </ul>
         </div>
       </nav>
