--- a/public/register.html
+++ b/public/register.html
@@ -5,58 +5,75 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Register</title>
     <link rel="icon" href="assets/logo.png" />
-    <link rel="stylesheet" type="text/css" href="general.css">
+    <link rel="stylesheet" type="text/css" href="general.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="box.css">
-
+    <link rel="stylesheet" type="text/css" href="box.css" />
   </head>
   <body style="text-align: center">
     <header id="navbar">
       <nav class="nav-wrapper container">
         <a href="index.html" class="home-link">
-          <img id="logo" src="assets/logo.png">
+          <img id="logo" src="assets/logo.png" />
           nextwatch
         </a>
-  
+
         <button type="button" class="nav-toggle">
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-  
+
         <div class="nav-menu">
           <ul class="nav-links">
-            <li class="nav-item"><a class="nav-link" href="recs.html">Recommendations</a></li>
-            <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
+            <li class="nav-item">
+              <a class="nav-link" href="recs.html">Recommendations</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="login.html">Login</a>
+            </li>
           </ul>
         </div>
       </nav>
     </header>
     <script src="nav.js"></script>
-    
+
     <div class="container-form">
       <h1>Register</h1>
 
-      <img class="big-logo" src="assets/logo.png">
+      <img class="big-logo" src="assets/logo.png" />
       <form id="registerForm">
-      <br />
-      <label for="email"></label>
-      <input placeholder="Email" type="text" id="email" name="email" class="rounded-input" required />
-      <br />
-      <br />
-      <label for="password"></label>
-      <input placeholder="Password" type="password" id="password" name="password" class="rounded-input" required />
-      <br />
-      <br />
-      <div id="result"></div>
-      <input type="submit" class="submit-button" value="Register" />
-    </form>
-    <div style="color: #ffffff">
-      <br />
-      Already have an account? <br /><br />
-      <a href="login.html" class="nonNavLink">Login here</a>
+        <br />
+        <label for="email"></label>
+        <input
+          placeholder="Email"
+          type="text"
+          id="email"
+          name="email"
+          class="rounded-input"
+          required
+        />
+        <br />
+        <br />
+        <label for="password"></label>
+        <input
+          placeholder="Password"
+          type="password"
+          id="password"
+          name="password"
+          class="rounded-input"
+          required
+        />
+        <br />
+        <br />
+        <div id="result"></div>
+        <input type="submit" class="submit-button" value="Register" />
+      </form>
+      <div style="color: #ffffff">
+        <br />
+        Already have an account? <br /><br />
+        <a href="login.html" class="nonNavLink">Login here</a>
+      </div>
     </div>
-  </div>
 
     <script>
       const registerForm = document.getElementById("registerForm");
@@ -81,7 +98,7 @@
             "Successdully resgitered! Directing you to the login page...";
           setTimeout(function () {
             window.location.href = "/login.html";
-          }, 2500);
+          }, 1000);
         } else {
           result.innerHTML = res.message;
         }
